--- a/styles/wholestyle.css
+++ b/styles/wholestyle.css
@@ -1061,6 +1061,7 @@ img.overlaps-image {
   .footer-hero {
     background-size: 80%;
     background-position: center bottom;
+    min-height: 420px;
   }
 }
 
@@ -1071,7 +1072,9 @@ img.overlaps-image {
   }
 
   .footer-hero {
-    background-size: 70%;
+    background-size: 90%;
+    min-height: 480px;
+    padding-bottom: 4rem;
   }
 }
 
