reverted footer changes

--- a/styles/wholestyle.css
+++ b/styles/wholestyle.css
@@ -1032,52 +1032,6 @@ img.overlaps-image {
 }
 
 /*footer CSS*/
-#page-footer {
-  margin-top: 60px;
-}
-
-.footer-hero {
-  border-radius: 12px;
-  background-color: #fff;
-  background-image: url("/temple2.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: right bottom;
-  padding-bottom: 2rem;
-}
-
-.footer-hero-heading h3 {
-  font-size: 32px;
-  letter-spacing: 0.08em;
-}
-
-#page-footer .footer-flag,
-.footer-hero .footer-flag {
-  max-width: 160px;
-  height: auto;
-}
-
-@media (max-width: 991px) {
-  .footer-hero {
-    background-size: 80%;
-    background-position: center bottom;
-    min-height: 420px;
-  }
-}
-
-@media (max-width: 767px) {
-  .footer-hero-heading {
-    flex-direction: column;
-    align-items: flex-start !important;
-  }
-
-  .footer-hero {
-    background-size: 90%;
-    min-height: 480px;
-    padding-bottom: 4rem;
-  }
-}
-
 #new-footer {
   background: url(/images/ftrbg.webp);
   background-repeat: no-repeat;
@@ -1122,21 +1076,19 @@ p.contact-para {
   font-weight: 600;
 }
 address.contact-para {
-  color: inherit;
+  color: white !important;
   font-size: 18px;
   font-weight: 600;
   font-style: normal;
 }
 address.footer-address .footer-address-link {
-  color: #1e2436;
-  font-size: 18px;
-  font-weight: 500;
+  color: inherit;
   text-decoration: none;
   display: inline-block;
 }
 address.footer-address .footer-address-link:hover,
 address.footer-address .footer-address-link:focus {
-  color: #1e2436;
+  color: #ffffff;
   text-decoration: underline;
 }
 img.social-icon {
